# cdt

./: .gitignore  CDT01 Application.md  CDT01 Application.md~  CDT02 Proposal.md  CDT02 Proposal.md~  README.md
.github/workflows/: ci.yml
CDT01 Application/: 20210809NJ-Database Setup.md~  CDT.cabal  CDT.cabal~  hie.yaml  hie.yaml~
CDT01 Application/app/: CDT-oracle-client.hs  CDT-oracle-client.hs~
CDT01 Application/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
CDT01 Application/dist-newstyle/src/: cardano-b_-c8db9876882556ed.cache  cardano-c_-6913fd4f4ef86015.cache  cardano-l_-48e3a74bf8b61f34.cache  cardano-p_-cae013aee062332a.cache  goblins-67efee8d68d79164.cache  iohk-moni_-1defcf7452717dc5.cache  ouroboros_-e51b1e265e7bb521.cache  plutus-3214de3b8d8ae7cc.cache  purescrip_-dbf3a2a8ca5c958c.cache  servant-p_-2a9020fb8c4044b3.cache
CDT01 Application/src/Oracle/: Core.hs  Funds.hs  PAB.hs  Test.hs
CDT02 Proposal/: 20210718NJ-Cardano Proposal.md  20210718NJ-Cardano Proposal.md~  20210727NJ-Meeting CampusUSA CU.md  20210727NJ-Meeting CampusUSA CU.md~  20210819NJ-Fund06.md~  test.js  test.js~  test.md  test.py  test.py~
CDT02 Proposal Resources/: Ethereum Average Transaction Fee.webloc  Rik Deman.md
CDT02 Proposal/20210727NJ-Meeting CampusUSA CU/: Campus Credit Union Letter.pages
bank-sim/: README.md  docker-compose.yml  package-lock.json  package.json  schema.sql  tsconfig.json  vitest.config.ts
bank-sim/scripts/: apply-schema.ts  credit-claim-lifecycle.ts  seed.ts
bank-sim/src/: bank.ts  db.ts  facility.ts  index.ts  seed.ts  types.ts
bank-sim/test/: bank.test.ts  facility.test.ts
credentials/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
credentials/scripts/: soft-prepare.mjs
credentials/src/: base58.ts  canonicalize.ts  did.ts  example.ts  identus.ts  index.ts  tls-fetch.ts  vc.ts  wallet-presentation.ts
credentials/test/: canonicalize.test.ts  credentials.test.ts  did.test.ts  http-identus.test.ts  identus-http.test.ts  identus.test.ts  wallet-presentation.test.ts
docs/: README.md  architecture.md  business-plan.md  compliance.md  demo-dashboard.html  feasibility.md  manual.md  payment-check-contract.md  product-position.md  production-readiness.md  proposal.md  rollout.md  security-audit.md  whitepaper.md  why-cardano.md
docs/network/: 01-master-network-agreement.md  README.md  (+9 more)
legacy/: README.md
onchain/: README.md  aiken.toml  plutus.json
webapp/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+189 files in other folders)
