Cabal-Version:      2.4
Name:               CDTCoin
Version:            0.1.0.0
Author:              Noah Jones
Maintainer:          noahtjones@icloud.com
Build-Type:          Simple
Copyright:           © 2021 Noah Jones
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Oracle.Core
                       Oracle.Funds
                       Oracle.PAB
                       Oracle.Swap
                       Oracle.Test
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , postgresql-simple -any
                     , HDBC
                     , HDBC-postgresql
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable CDT-oracle-pab
  main-is: CDT-oracle-pab.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , CDTCoin
                     , plutus-use-cases
                     , text

executable CDT-oracle-client
  main-is: CDT-oracle-client.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , bytestring
                     , regex-tdfa ^>= 1.3.1.0
                     , req ^>= 3.9.0
                     , text
                     , uuid

executable CDT-swap-client
  main-is: CDT-swap-client.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , plutus-ledger
                     , plutus-pab
                     , CDTCoin
                     , req ^>= 3.9.0
                     , text
                     , uuid
